methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:34: error: illegal start of simple pattern
  for(<-1 to 5) {
      ^MethodsPicture:37: error: '<-' expected but '}' found.
  }
  ^